--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": false,
   "description": "协赞工具库",
-    "author": {
+  "author": {
     "name": "iworkerweb",
     "email": "865116277@qq.com",
     "url": "https://github.com/iworkerweb/xiezan-util"
@@ -25,12 +25,25 @@
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build-ts": "tsc -p tsconfig.build.json"
+    "build-ts": "yarn lint & tsc -p tsconfig.build.json",
+    "lint": "eslint src --ext .ts,.js"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
     "axios": "^0.21.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint",
+      "pre-push": "yarn lint"
+    }
   }
 }
