--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lint": "eslint src --ext .ts,.js"
   },
   "devDependencies": {
+    "@types/node": "^14.14.20",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
     "eslint": "^7.17.0",
