feat: 添加 prepublishOnly 配置

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build-ts": "yarn lint & tsc -p tsconfig.build.json",
-    "lint": "eslint src --ext .ts,.js"
+    "lint": "eslint src --ext .ts,.js",
+    "prepublishOnly": "yarn build-ts"
   },
   "devDependencies": {
     "@types/node": "^14.14.20",
