--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "xiezan-util-test",
-  "version": "0.1.1",
+  "name": "xiezan-hooks",
+  "version": "0.1.0",
   "private": false,
   "description": "协赞工具库",
   "author": {
